[package]
name = "utf8toipv4"
version = "1.0.0"
edition = "2024"
license-file = "LICENSE"
description = "Convert UTF-8 to ipv4 addresses and vice versa"
repository = "https://github.com/isaiahsherfick/utf8toipv4"

[lib]
name = "utf8toipv4"
path = "src/lib.rs"

[[bin]]
name = "utf8toipv4"
path = "src/utf8_to_ipv4.rs"

[[bin]]
name = "ipv4toutf8"
path = "src/ipv4_to_utf8.rs"
